Moved HOME_PATH to ConfigVars; Added average price by state calculation and display; added phpUnit submodule; stubbed out download support in Datafiniti client

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "HereInMyCar/lib/guzzle3"]
 	path = HereInMyCar/lib/guzzle3
 	url = git://github.com/guzzle/guzzle3
+[submodule "HereInMyCar/lib/phpunit"]
+	path = HereInMyCar/lib/phpunit
+	url = git://github.com/sebastianbergmann/phpunit.git
