Change specifications to run development database to test book_api

--- a/db/config.yml
+++ b/db/config.yml
@@ -4,8 +4,8 @@ development:
   pool: 5
   timeout: 5000
 
-test:
-  adapter: postgresql
-  database: datafiniti_test
-  pool: 5
-  timeout: 5000
+# test:
+#   adapter: postgresql
+#   database: datafiniti_test
+#   pool: 5
+#   timeout: 5000
