--- a/AllMyBooksArePacked/Gemfile
+++ b/AllMyBooksArePacked/Gemfile
@@ -4,6 +4,7 @@ ruby '2.0.0'
 gem 'rspec', '~> 2.14.1'
 gem 'nokogiri'
 gem 'bundler', '~> 1.7'
+gem 'jsonify', '~> 0.4.1'
 
 # Testing
 gem 'pry-byebug'
