--- a/AllMyBooksArePacked/app/Gemfile
+++ b/AllMyBooksArePacked/app/Gemfile
@@ -14,6 +14,7 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
+gem 'dotenv'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
@@ -26,6 +27,9 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Form generation
 gem 'simple_form', '~> 3.1'
+
+# html parsing
+gem 'nokogiri'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
