--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -26,6 +26,7 @@
     "gulp-typescript": "^2.11.0",
     "hashmap": "^2.0.5",
     "jsonwebtoken": "^5.5.4",
+    "knapsack-js": "^1.0.1",
     "morgan": "~1.6.1",
     "promise": "^7.1.1",
     "reflect-metadata": "0.1.2",
