--- a/AllMyBooksArePacked/BookPacker/build.gradle
+++ b/AllMyBooksArePacked/BookPacker/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 }
