--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -4,12 +4,12 @@
   "description": "Scraping and packing books",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server/server.js"
   },
   "author": "Garrett Brustkern",
   "license": "MIT",
   "dependencies": {
-    "browserify-middleware": "^5.0.2",
+    "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "express": "^4.12.4",
     "fs": "0.0.2"
