--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "express": "^4.12.4",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^3.4.0",
