--- a/Identity/package.json
+++ b/Identity/package.json
@@ -4,6 +4,7 @@
   "description": "Authentication challenge for Datafiniti",
   "main": "index.js",
   "scripts": {
+    "start": "node ./server/express-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
