--- a/Identity/package.json
+++ b/Identity/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/frankievx/DataFizz#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
+    "bcrypt-node": "^0.1.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
