--- a/Identity/package.json
+++ b/Identity/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/frankievx/DataFizz#readme",
   "dependencies": {
+    "axios": "^0.14.0",
     "bcrypt": "^0.8.7",
     "bcrypt-node": "^0.1.0",
     "bcrypt-nodejs": "0.0.3",
