--- a/Identity/package.json
+++ b/Identity/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^7.1.9",
     "material-ui": "^0.15.4",
     "mongoose": "^4.6.0",
+    "nodemailer": "^2.6.0",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
