--- a/Identity/package.json
+++ b/Identity/package.json
@@ -7,6 +7,7 @@
     "start": "node ./server/express-server.js",
     "build": "webpack --verbose --colors --display-error-details --config webpack.config.prod.js",
     "prod": "NODE_ENV=production forever start . ",
+    "prod-node": "NODE_ENV=production node . ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
     "material-ui": "^0.15.4",
     "mongoose": "^4.6.0",
@@ -39,6 +41,7 @@
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
