--- a/Identity/package.json
+++ b/Identity/package.json
@@ -47,6 +47,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "forever": "^0.15.2",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
