--- a/Identity/Vagrantfile
+++ b/Identity/Vagrantfile
@@ -13,8 +13,9 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = "hashicorp/precise64"
-  config.vm.box_version = "1.1.0"
-  config.vm.box_url = "http://files.vagrantup.com/precise64.box"
+  config.vm.box = "hashicorp/precise64"
+  config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.network :forwarded_port, guest: 80, host: 4567
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
