--- a/Identity/package.json
+++ b/Identity/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
+    "type": "git"b,
     "url": "git+https://github.com/frankievx/DataFizz.git"
   },
   "author": "Frankie Vithayathil",
