--- a/Identity/package.json
+++ b/Identity/package.json
@@ -49,6 +49,8 @@
     "file-loader": "^0.9.0",
     "forever": "^0.15.2",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.9.3",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
