Modify package.json production script

--- a/Identity/package.json
+++ b/Identity/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development node ./server/express-server.js",
     "build": "webpack --verbose --colors --display-error-details --config webpack.config.prod.js",
-    "prod": "NODE_ENV=production forever start . ",
+    "prod": "NODE_ENV=production forever start --uid 'datafizz' . ",
     "prod-node": "NODE_ENV=production node . ",
     "postinstall": "npm run build && npm run prod-node",
     "test": "echo \"Error: no test specified\" && exit 1"
