--- a/Identity/package.json
+++ b/Identity/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "git@github.com:nizarayari/DataFizz.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "./node_modules/webpack/bin/webpack.js -p",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
@@ -16,35 +17,43 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-react-hmre": "^1.1.1",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "css-loader": "^0.23.1",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "morgan": "^1.7.0",
+    "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.7",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
-    "babel-preset-stage-0": "^6.5.0",
-    "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
-    "redux": "^3.0.4",
     "axios": "^0.12.0",
-    "bcrypt": "^0.8.7",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.1.18",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.6",
+    "jwt-simple": "^0.5.0",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.6.0",
     "path": "^0.12.7",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
     "react-redux-form": "^0.14.1",
-    "redux-form": "^4.1.3",
-    "redux-thunk": "^2.0.1",
+    "react-router": "^2.0.1",
+    "redux": "^3.0.4",
     "redux-devtools": "^3.3.1",
+    "redux-form": "^4.1.3",
+    "redux-persist": "^3.2.2",
     "redux-promise": "^0.5.3",
-    "redux-persist": "^3.2.2"
+    "redux-thunk": "^2.0.1"
   }
 }
