--- a/Identity/package.json
+++ b/Identity/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "repository": "git@github.com:nizarayari/DataFizz.git",
   "scripts": {
+    "dev": "nodemon server/server.js",
     "build": "./node_modules/webpack/bin/webpack.js -p",
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
@@ -38,6 +39,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.6",
     "jwt-simple": "^0.5.0",
