--- a/Identity/package.json
+++ b/Identity/package.json
@@ -45,6 +45,7 @@
     "jwt-simple": "^0.5.0",
     "lodash": "^3.10.1",
     "mongoose": "^4.6.0",
+    "nodemailer": "^2.6.0",
     "path": "^0.12.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
