--- a/Identity/package.json
+++ b/Identity/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "repository": "git@github.com:nizarayari/DataFizz.git",
   "scripts": {
-    "dev": "nodemon server/server.js",
+    "server": "nodemon server/server.js",
     "build": "./node_modules/webpack/bin/webpack.js -p",
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "start": "npm run dev | npm run server" ,
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
