--- a/Identity/package.json
+++ b/Identity/package.json
@@ -8,9 +8,7 @@
     "server": "nodemon server/server.js",
     "build": "./node_modules/webpack/bin/webpack.js -p",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
-    "start": "npm run dev | npm run server" ,
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "start": "npm run dev | npm run server"
   },
   "author": "Nizar Ayari",
   "license": "ISC",
@@ -42,8 +40,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.6",
-    "jwt-simple": "^0.5.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^3.10.1",
     "mongoose": "^4.6.0",
     "nodemailer": "^2.6.0",
