--- a/Identity/package.json
+++ b/Identity/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.0.4",
     "redux-form": "^6.1.1",
     "redux-logger": "^2.7.0",
