--- a/Identity/package.json
+++ b/Identity/package.json
@@ -35,8 +35,9 @@
     "material-ui": "^0.16.0",
     "mongoose": "^4.6.4",
     "morgan": "^1.7.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.3",
+    "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "react-tap-event-plugin": "^1.0.0",
