--- a/Identity/package.json
+++ b/Identity/package.json
@@ -5,36 +5,77 @@
   "main": "index.js",
   "repository": "git@github.com:sdkindy/DataFizz.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "prestart": "./prestart.sh",
+    "start": "NODE_ENV=development npm-run-all --parallel open:db open:src lint:watch",
+    "open:src": "babel-node server/index.js",
+    "open:db": "ttab -G mongod",
+    "lint": "node_modules/.bin/esw webpack.config.* src",
+    "lint:watch": "npm run lint -- --watch --ext .js --ext .jsx --color"
   },
   "author": "Sonam D. Kindy",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "jsdom": "8.5.0",
+    "mocha": "2.4.5",
+    "react-addons-test-utils": "15.0.2",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "^1.14.0",
+    "autoprefixer": "^6.4.0",
+    "babel-cli": "6.8.0",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-register": "6.8.0",
+    "compression": "1.6.1",
+    "cross-env": "1.0.7",
+    "css-loader": "0.23.1",
+    "enzyme": "2.2.0",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-config-airbnb-base": "^3.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-watch": "^2.1.14",
+    "eventsource-polyfill": "0.9.6",
+    "expect": "1.19.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "nock": "8.0.0",
+    "node-sass": "^3.8.0",
+    "npm-run-all": "1.8.0",
+    "open": "0.0.5",
+    "redux-immutable-state-invariant": "1.2.3",
+    "redux-mock-store": "1.0.2",
+    "resolve-url-loader": "^1.6.0",
+    "rimraf": "2.5.2",
+    "sass-loader": "^4.0.0",
+    "style-loader": "0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
     "axios": "^0.15.1",
     "babel-preset-stage-1": "^6.1.18",
+    "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^3.10.1",
     "material-ui": "^0.16.0",
     "mongoose": "^4.6.4",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.6.4",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -45,6 +86,7 @@
     "redux-form": "^6.1.1",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "ttab": "^0.5.0",
     "uuid": "^2.0.3"
   }
 }
