Modified to accomodate running client-facing content and server/database on separate ports

--- a/Identity/package.json
+++ b/Identity/package.json
@@ -6,11 +6,14 @@
   "repository": "git@github.com:sdkindy/DataFizz.git",
   "scripts": {
     "prestart": "./prestart.sh",
-    "start": "NODE_ENV=development npm-run-all --parallel open:db open:src lint:watch",
-    "open:src": "babel-node server/index.js",
+    "start": "NODE_ENV=development npm-run-all --parallel open:db open:src open:server lint:watch",
+    "open:src": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "open:db": "ttab -G mongod",
+    "open:server": "ttab -d ./server npm run dev",
     "lint": "node_modules/.bin/esw webpack.config.* src",
-    "lint:watch": "npm run lint -- --watch --ext .js --ext .jsx --color"
+    "lint:watch": "npm run lint -- --watch --ext .js --ext .jsx --color",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Sonam D. Kindy",
   "license": "ISC",
@@ -44,15 +47,12 @@
     "eslint-plugin-react": "^5.2.2",
     "eslint-watch": "^2.1.14",
     "eventsource-polyfill": "0.9.6",
-    "expect": "1.19.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "nock": "8.0.0",
     "node-sass": "^3.8.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
-    "redux-immutable-state-invariant": "1.2.3",
-    "redux-mock-store": "1.0.2",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "2.5.2",
     "sass-loader": "^4.0.0",
@@ -64,20 +64,9 @@
   "dependencies": {
     "axios": "^0.15.1",
     "babel-preset-stage-1": "^6.1.18",
-    "bcryptjs": "^2.3.0",
-    "bluebird": "^3.4.6",
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.1",
-    "dotenv": "^2.0.0",
-    "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.9",
     "lodash": "^3.10.1",
     "material-ui": "^0.16.0",
-    "mongoose": "^4.6.4",
-    "morgan": "^1.7.0",
-    "nodemailer": "^2.6.4",
     "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
