--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bookpacking",
   "version": "1.0.0",
-  "description": "Simple web scraper.",
+  "description": "Simple web scraper",
   "main": "main.js",
   "dependencies": {
     "bluebird": "^3.4.6",
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "npm test"
+    "test": "mocha tests/testSpec.js"
   },
   "repository": {
     "type": "git",
