--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.0",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.2",
+    "morgan": "^1.7.0",
     "path": "^0.12.7"
   }
 }
