--- a/Identity/package.json
+++ b/Identity/package.json
@@ -51,6 +51,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1"
   }
