--- a/Identity/package.json
+++ b/Identity/package.json
@@ -50,9 +50,10 @@
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-form": "^6.6.1"
+    "redux-form": "^6.6.1",
+    "redux-promise": "^0.5.3"
   }
 }
