--- a/Identity/package.json
+++ b/Identity/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "mocha": "^3.2.0",
+    "morgan": "^1.8.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
