--- a/Identity/package.json
+++ b/Identity/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
