--- a/Identity/package.json
+++ b/Identity/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.2",
+    "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
     "redux-promise": "^0.5.3"
