--- a/Identity/package.json
+++ b/Identity/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.16.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "express": "^4.15.2",
     "http": "^0.0.0",
@@ -52,12 +53,15 @@
     "mongoose": "^4.9.3",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-dd-menu": "^2.0.0",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.2",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "semantic-ui-react": "^0.67.2"
   }
 }
