--- a/Identity/package.json
+++ b/Identity/package.json
@@ -50,6 +50,7 @@
     "express": "^4.15.2",
     "http": "^0.0.0",
     "jsonwebtoken": "^7.3.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.3",
     "path": "^0.12.7",
     "prop-types": "^15.5.8",
