--- a/Identity/package.json
+++ b/Identity/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
+    "react-router-transition": "^0.0.6",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
