--- a/Identity/package.json
+++ b/Identity/package.json
@@ -67,6 +67,7 @@
     "react-router": "^3.0.2",
     "react-router-transition": "^0.0.6",
     "react-select": "^1.0.0-rc.3",
+    "react-transition-group": "^1.1.2",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
     "redux-logger": "^3.0.1",
