--- a/AllMyBooksArePacked/package.json
+++ b/AllMyBooksArePacked/package.json
@@ -4,7 +4,7 @@
   "description": "## Purpose",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm install && node server"
   },
   "author": "",
   "license": "ISC",
