--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
-    "cheerio": "^1.0.0-rc.2",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "cheerio": "^1.0.0-rc.2"
   },
   "devDependencies": {},
   "scripts": {
