--- a/Crawling/package.json
+++ b/Crawling/package.json
@@ -5,10 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.3",
     "fs": "^0.0.1-security",
-    "nightmare": "^3.0.1",
-    "request": "^2.87.0"
+    "nightmare": "^3.0.1"
   },
   "devDependencies": {},
   "scripts": {
