--- a/Crawling/package.json
+++ b/Crawling/package.json
@@ -4,8 +4,13 @@
   "description": "Collects data on 10 books from Amazon Books and stores them in a JSON document ",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sam Smith",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "nightmare": "^3.0.1"
+  },
+  "devDependencies": {}
 }
