--- a/Crawling/package.json
+++ b/Crawling/package.json
@@ -10,6 +10,7 @@
   "author": "Sam Smith",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "nightmare": "^3.0.1"
   },
   "devDependencies": {}
