--- a/Crawling/package.json
+++ b/Crawling/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node src/index",
     "lint": "eslint src/**",
-    "test": "jest src",
-    "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
+    "test": "mocha"
   },
   "author": "Sam Smith",
   "license": "MIT",
@@ -16,10 +15,11 @@
     "nightmare": "^3.0.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^5.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.18.0",
-    "jest": "^23.4.1"
+    "eslint-plugin-mocha": "^5.1.0",
+    "mocha": "^5.2.0"
   }
 }
